--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>neuedu.spring.01</module>
         <module>neuedu.spring.02</module>
+        <module>neuedu.spring.03</module>
     </modules>
 
     <properties>
