--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>neuedu.spring.01</module>
         <module>neuedu.spring.02</module>
         <module>neuedu.spring.03</module>
+        <module>neuedu.spring.04</module>
     </modules>
 
     <properties>
@@ -20,6 +21,7 @@
         <junit.version>4.12</junit.version>
         <spring.version>5.0.5.RELEASE</spring.version>
         <mysql.version>5.1.46</mysql.version>
+        <lombok.version>1.16.20</lombok.version>
     </properties>
 
 
@@ -53,6 +55,13 @@
                 <version>${spring.version}</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
 
 
