--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>neuedu.spring.02</module>
         <module>neuedu.spring.03</module>
         <module>neuedu.spring.04</module>
+        <module>neuedu.spring.05</module>
     </modules>
 
     <properties>
@@ -22,6 +23,7 @@
         <spring.version>5.0.5.RELEASE</spring.version>
         <mysql.version>5.1.46</mysql.version>
         <lombok.version>1.16.20</lombok.version>
+        <aspectj.version>1.9.1</aspectj.version>
     </properties>
 
 
@@ -65,11 +67,51 @@
 
 
 
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-aop -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+
+
+
+
+
+
         </dependencies>
 
 
     </dependencyManagement>
 
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <proc>none</proc>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+    </build>
 
 
 
